# telegram-feedback-bot

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Dockerfile  LICENSE  PRIVACY_POLICY.md  README.md  alembic.ini  components.json  docker-compose.override.traefik.yml  docker-compose.postgres.yml  docker-compose.yml  eslint.config.js  example.env  jsconfig.json  lefthook.yaml  manage.py  mise.development.toml  mise.toml  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  renovate.json5  requirements.txt  svelte.config.js  tsconfig.eslint.json  vite.config.js  vitest-setup-client.js  wuchale.config.js
config/: api.py  asgi.py  settings.py  urls.py  wsgi.py
feedback_bot/: apps.py  crud.py  middleware.py  models.py  urls.py  views.py
feedback_bot/api/: miniapp.py  webhooks.py
feedback_bot/api/miniapp/: __init__.py  bots.py  decorators.py  language.py  users.py
feedback_bot/management/commands/: migrate_legacy_data.py  remove_feedback_webhooks.py
feedback_bot/migrations/: 0001_initial.py  0002_broadcastmessage.py  0003_banneduser_reason.py  0004_alter_messagemapping_owner_message_id.py  0005_remove_bot_confirmations_on.py  0006_bot_media_flags.py  0007_bot_antiflood_enabled_feedbackchat_last_feedback_at.py  0008_bot_communication_mode.py  0009_bot_use_topics.py
feedback_bot/static/js/: app.js
feedback_bot/telegram/: bot.py  crud.py  init.py  utils.py
feedback_bot/telegram/builder/: bot.py  crud.py  filters.py
feedback_bot/telegram/builder/modules/: __init__.py  broadcast.py  restart.py  start.py  update.py  whitelist.py
feedback_bot/telegram/feedback_bot/: bot.py  dispatcher.py
feedback_bot/telegram/feedback_bot/modules/: ban.py  broadcast.py  delete.py  groups.py  messages.py  start.py  stats.py
feedback_bot/telegram/utils/: broadcast.py  cryptography.py  errors.py  mini_app.py  modules_loader.py  restart.py
feedback_bot/templates/mini_app/: index.html
feedback_bot/utils/: cryptography.py  modules_loader.py  telegram.py
feedbackbot/: __init__.py  __main__.py  bot.py
feedbackbot/db/: __init__.py  curd.py  session.py
feedbackbot/db/migrations/: env.py
feedbackbot/db/models/: chat.py  mapping.py  stats.py  topic.py
feedbackbot/modules/: __init__.py  broadcast.py  errors.py  receiver.py  replier.py  restart.py  start.py  stats.py
feedbackbot/utils/: analytics.py  commands.py  filters.py  modules_loader.py  restart.py  telegram.py  telegram_handlers.py
frontend/: .eslintrc.cjs  app.css  app.html  demo.spec.js  hooks.js  hooks.server.js
frontend/components/: back.svelte  navbar.svelte
frontend/components/management/: AddButton.svelte  ListItem.svelte  ManagementCard.svelte  SettingsPage.svelte  SwitchRow.svelte  UserAccessForm.svelte
frontend/lib/: api.js  i18n.ts  page_transition.js  stores.svelte.js  telegram.js  telegram_debug.js  types.ts  utils.js  utils.ts  wuchale-loader.js  wuchale-loader.svelte.js
frontend/lib/mappers/: bot.ts  user.ts
frontend/routes/: +layout.svelte  +page.svelte  page.svelte.spec.js
frontend/routes/add_bot/: +page.svelte
frontend/routes/add_user/: +page.svelte
frontend/routes/bot/[uuid]/: +page.svelte  +page.ts
frontend/routes/demo/paraglide/: +page.svelte
frontend/routes/settings/: +page.svelte
frontend/routes/user/[telegram_id]/: +page.svelte  +page.ts
frontend/tests/routes/add_bot/: page.svelte.test.ts
frontend/tests/routes/add_user/: page.svelte.test.ts
locale/ar/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
messages/: ar.json  en.json
messages/ar/LC_MESSAGES/: django.po  frontend.po
messages/en/LC_MESSAGES/: django.po  frontend.po
mini_app/: apps.py  urls.py  views.py
mini_app/static/css/: style.css
project.inlang/: project_id  settings.json
scripts/: capture-app-screenshots.mjs
src/: __init__.py  __main__.py  app.d.ts  app.html  main.py
src/bot/db/: __init__.py  alembic.ini  crud.py  session.py
src/bot/db/migrations/: env.py
src/bot/db/models/: chat.py  mapping.py  stats.py  topic.py
src/bot/db/scripts/: migrate.py
src/bot/modules/: broadcast.py  receiver.py  replier.py  start.py  stats.py
src/bot/utils/: analytics.py  filters.py  telegram.py
src/builder/db/: __init__.py  crud.py  session.py
src/builder/db/migrations/: env.py
src/builder/db/models/: bot.py  user.py  whitelist.py
src/builder/modules/: add.py  admin.py  broadcast.py  errors.py  manage.py  manage_bots.py  manage_settings.py  restart.py  start.py  update.py
src/builder/utils/: filters.py  keyboards.py
src/common/db/: utils.py
src/common/utils/: commands.py  cryptography.py  filters.py  i18n.py  restart.py  telegram.py  telegram_handlers.py  whitelist.py
src/components/management/: AddButton.svelte  BotMessageField.svelte  CommunicationModeSection.svelte  ListItem.svelte  ManagementCard.svelte  SettingsPage.svelte  UserAccessForm.svelte
src/i18n/: languages.json
src/i18n/locales/: ar_EG.json  en_US.json
src/lib/: api.js  i18n.ts  stores.svelte.js  telegram.js  telegram_debug.js  types.ts  utils.ts  wuchale-loader.svelte.js
src/lib/constants/: communication_mode.ts
src/lib/mappers/: bot.ts
src/locales/: ar.po  en.po  js.loader.js  js.loader.server.js  main.loader.svelte.js
src/routes/: +layout.svelte  +page.svelte
src/routes/add_bot/: +page.svelte
src/routes/add_user/: +page.svelte
src/routes/app/: +layout.svelte  +page.svelte
src/routes/app/add_bot/: +page.svelte
src/routes/app/add_user/: +page.svelte
src/routes/app/settings/: +page.svelte
src/routes/bot/[uuid]/: +page.svelte
src/routes/user/[telegram_id]/: +page.svelte
src/tests/components/management/: SwitchRow.svelte.test.ts  UserAccessForm.svelte.test.ts
src/tests/routes/: +page.svelte.test.ts
src/tests/routes/add_bot/: page.svelte.test.ts
src/tests/routes/add_user/: page.svelte.test.ts
src/tests/routes/settings/: page.svelte.test.ts
src/tests/utils/: i18n-mock.ts
tests/feedback_bot/api/miniapp/: conftest.py  (+2 more)
tests/feedback_bot/django/: test_crud.py
tests/feedback_bot/telegram/: factories.py  test_broadcast_utils.py
(+79 files in other folders)
