[project]
name = "feedback-telegram-bot"
version = "0.1.0"
description = "A bot that builds feedback Telegram bots like Livegram but with topics support."
authors = [
    { name = "yshalsager", email = "contact@yshalsager.com" },
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.2",
    "regex>=2024.11.6",
    "tgcrypto>=1.2.5",
    "plate>=1.0.1",
    "uvloop>=0.21.0",
    "pydantic>=2.11.7",
    "pyrofork",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "mypy>=1.16.1",
    "ipython>=9.3.0",
    "rich>=14.0.0",
    "jurigged>=0.6.1"
]

[tool.uv.sources]
pyrofork = { git = "https://github.com/Mayuri-Chan/pyrofork.git", rev = "12d9297c0204a85dcf6d45a241dac2bd71addfe3" }

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
src = ["src"]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = [
    "E501", "S307", "RET504", "S101", "D211", "D213",
    "ERA001", # Found commented-out code
    "G004", # Logging statement uses f-string
    "PLR2004", # Magic value used in comparison, consider replacing 3 with a constant variable
    "PLR0913", # Too many arguments to function call (6 > 5)
    "E712",
    "RUF001",  # ambiguous-unicode-character-string	String contains ambiguous {}. Did you mean {}?
    "ISC001"  # formatter complains about it
]
unfixable = [
    "ERA001", "F401", "F841", "T201", "T203",
    "E711", # none-comparison. SQLAlchemy does not support is None apparently.
    "E712", # true-false-comparison. SQLAlchemy does not support it apparently.
]

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*/*.py" = ["N999"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
