[project]
name = "feedback-telegram-bot"
version = "0.1.0"
description = "A bot that builds feedback Telegram bots like Livegram but with topics support."
authors = [
    { name = "yshalsager", email = "contact@yshalsager.com" },
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.6",
    "django>=5.2,<6",
    "django-asgi-lifespan>=0.4.1",
    "django-ninja>=1.4.3",
    "granian[reload,rloop]>=2.5.0",
    "orjson>=3.10.18,<4",
    "psycopg[binary]>=3.2.9,<4",
    "python-telegram-bot>=22.3",
    "regex>=2025.7.34",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "pre-commit>=4.2.0",
    "mypy>=1.17.1",
    "ipython>=9.4.0",
    "rich>=14.1.0",
]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
plugins = []

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
src = ["src"]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = [
    "E501", "S307", "RET504", "S101", "D211", "D213",
    "ERA001", # Found commented-out code
    "G004", # Logging statement uses f-string
    "PLR2004", # Magic value used in comparison, consider replacing 3 with a constant variable
    "PLR0913", # Too many arguments to function call (6 > 5)
    "E712",
    "RUF001",  # ambiguous-unicode-character-string	String contains ambiguous {}. Did you mean {}?
    "ISC001"  # formatter complains about it
]
unfixable = [
    "ERA001", "F401", "F841", "T201", "T203",
    "E711", # none-comparison. SQLAlchemy does not support is None apparently.
    "E712", # true-false-comparison. SQLAlchemy does not support it apparently.
]

[tool.ruff.lint.extend-per-file-ignores]
"*/migrations/*/*.py" = ["N999"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
